--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chance": "^1.1.11",
     "color-convert": "^2.0.1",
     "next": "13.4.12",
     "react": "18.2.0",
