--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
-    "styled-components": "^6.0.5"
+    "styled-components": "^6.0.5",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "8.46.0",
